[gd_scene load_steps=10 format=3 uid="uid://q6exi3bx7m4r"]

[ext_resource type="Script" path="res://main/menu/menu.gd" id="1_bykr1"]
[ext_resource type="FontFile" uid="uid://dbbd685dur5vv" path="res://assets/fonts/EquipmentPro.ttf" id="1_pu22l"]
[ext_resource type="StyleBox" uid="uid://01ahi7lkb1iy" path="res://assets/theme/menuButtonNormal.tres" id="2_7nl3k"]
[ext_resource type="StyleBox" uid="uid://pds578xhwt1v" path="res://assets/theme/menuButtonHover.tres" id="3_epvdq"]
[ext_resource type="StyleBox" uid="uid://bdnpqg4pilbvx" path="res://assets/theme/menuButtonPressed.tres" id="4_ggu4k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vcpy6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ntr6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nc756"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ixjp7"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bykr1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.458824, 0.211765, 0.254902, 1)

[node name="MenuMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 40

[node name="MenuVerticalContainer" type="VBoxContainer" parent="MenuMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleMarginContainer" type="MarginContainer" parent="MenuMarginContainer/MenuVerticalContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="Title" type="RichTextLabel" parent="MenuMarginContainer/MenuVerticalContainer/TitleMarginContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 13
theme_override_fonts/normal_font = ExtResource("1_pu22l")
theme_override_font_sizes/normal_font_size = 64
text = "Life is Plain"
fit_content = true
autowrap_mode = 0

[node name="ButtonListVerticalContainer" type="VBoxContainer" parent="MenuMarginContainer/MenuVerticalContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="MenuMarginContainer/MenuVerticalContainer/ButtonListVerticalContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("1_pu22l")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_7nl3k")
theme_override_styles/hover = ExtResource("3_epvdq")
theme_override_styles/pressed = ExtResource("4_ggu4k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vcpy6")
text = "Start"

[node name="OptionButton" type="Button" parent="MenuMarginContainer/MenuVerticalContainer/ButtonListVerticalContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("1_pu22l")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_7nl3k")
theme_override_styles/hover = ExtResource("3_epvdq")
theme_override_styles/pressed = ExtResource("4_ggu4k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ntr6")
text = "Option"

[node name="CreditButton" type="Button" parent="MenuMarginContainer/MenuVerticalContainer/ButtonListVerticalContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("1_pu22l")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_7nl3k")
theme_override_styles/hover = ExtResource("3_epvdq")
theme_override_styles/pressed = ExtResource("4_ggu4k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nc756")
text = "Credit"

[node name="QuitButton" type="Button" parent="MenuMarginContainer/MenuVerticalContainer/ButtonListVerticalContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("1_pu22l")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_7nl3k")
theme_override_styles/hover = ExtResource("3_epvdq")
theme_override_styles/pressed = ExtResource("4_ggu4k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ixjp7")
text = "Quit"
